--- a/static/homepage.html
+++ b/static/homepage.html
@@ -9,7 +9,7 @@
 	<!-- Bootstrap -->
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/bootstrap-theme.min.css" rel="stylesheet">
-	<link href="css/introHCI.css" rel="stylesheet"/>
+	<link href="css/homepage.css" rel="stylesheet"/>
 </head>
 
 <body>
