Modified ids and classes

--- a/static/create_meetups.html
+++ b/static/create_meetups.html
@@ -14,9 +14,9 @@
   </head>
 
   <body>
-    <div id="Top">
+    <div id="top">
       <!-- Links to Homepage, Title and Logo -->
-      <span id="Title">
+      <span id="title">
         <a href="">
           StudyBuddy
           <img src="http://i.imgur.com/8nF4920.png">
@@ -24,26 +24,26 @@
       </span>
 
       <!-- Shows signed-in user and their profile picture -->
-      <span id="User">
+      <span id="user">
         Welcome!
         <a href="">
-          <img src="" id="User Photo">
+          <img src="" id="user_photo">
           Corgi
         </a>
       </span>
 
-      <span id="Sign Out">
+      <span id="sign_out">
         <a href="" Sign Out </a>
       </span>
     </div>
 
     <!-- TOP MENU BAR -->
-  	<div id="Menu Bar">
-  		<span id="Left Menu Bar">
+  	<div id="menu_bar">
+  		<span id="left_menu_bar">
   			<a href="">Friends</a>
   		</span>
 
-  		<span id="Right Menu Bar">
+  		<span id="right_menu_bar">
   			<a href="">Settings</a>
   			<a href="">Contact Us</a>
   			<a href="">Help</a>
@@ -51,7 +51,7 @@
   	</div>
 
   	<!-- FRIENDS LIST -->
-  	<div id="Add Friend Button">
+  	<div id="add_friend_button">
   		+ Add Friend
   	</div>
   </body>
