Unfinished Homepage CSS

--- a/static/homepage.html
+++ b/static/homepage.html
@@ -13,59 +13,60 @@
 </head>
 
 <body>
-
 	<!-- TOP -->
 	<div id="Top">
 
 		<!-- Links to Homepage, Title and Corgi Logo -->
-		<span id="Title">
+		<span id="TopLeft">
+			<a href="" id="Title">StudyBuddy</a>
 
 			<!-- REPLACE STUDYBUDDY TITLE WITH DRAWN PICTURE LATER (Maybe)
 				 Title + Corgi Logo both lead to Homepage -->
 			<a href="">
-				StudyBuddy
-				<img src="http://i.imgur.com/8nF4920.png"></a>
+				<img src="http://i.imgur.com/8nF4920.png" id="TitleLogo"></a>
 		</span>
 
 		<!-- Shows signed in user and their profile picture -->
-		<span id="User">
-			Welcome!
+		<span id="TopRight">
+			<span id="User">
+				Welcome!
 
-			<!-- User Name and Profile Picture, LINK to Profile Page -->
-			<a href="">
-				<img src="" id="User Photo">
-				Corgi</a>
-		</span>
+				<!-- User Name and Profile Picture, LINK to Profile Page -->
+				<a href="">
+					<img src="http://i.imgur.com/8nF4920.png" id="UserPhoto">
+				</a>
+				<a href="" id="UserName">Corgi</a>
+			</span>
 
-		<!-- Shows sign out option -->
-		<span id="Sign Out">
+			<!-- Shows sign out option -->
 			<!-- Bar Separator -->
-			|
+			<span id="BarSeparator">|</span>
+
 			<!-- Sign Out Button LINK to Login page -->
-			<a href="">Sign Out</a>
+			<a href="" id="SignOut">Sign Out</a>
 		</span>
 	</div>
 
 	<!-- TOP MENU BAR -->
-	<div id="Menu Bar">
-		<span id="Left Menu Bar">
-			<a href="">Friends</a>
+	<div id="MenuBar">
+		<span id="LeftMenuBar">
+			<span id="Friends">Friends</span>
 		</span>
 
-		<span id="Right Menu Bar">
+		<span id="RightMenuBar">
 			<a href="">Settings</a>
-			<a href="">Contact Us</a>
+			<a href="" id="ContactUs">Contact Us</a>
 			<a href="">Help</a>
 		</span>
 	</div>
 
 	<!-- FRIENDS LIST -->
-	<div id="Add Friend Button">
+	<div id="AddFriendButton">
 		+ Add Friend
 	</div>
 
 	<!-- MAIN BOX -->
-	<div id="Main Box">
+	<div id="MainBox">
 
 		<!-- Paw Pad doesn't need to be linked to My Meetups, 
 			 instead information should be shown as a popup when 
@@ -85,7 +86,7 @@
 			</a>
 
 			<!-- Spaceholder (Gap) Between the Bones -->
-			<p id="Space Between Bones"></p>
+			<p id="SpaceBetweenBones"></p>
 			
 			<!-- Create Meetup Button (Bottom) -->
 			<a href="">
