Worked further on Create Meetups Page

--- a/static/create_meetups.html
+++ b/static/create_meetups.html
@@ -10,7 +10,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
   	<link href="css/bootstrap-theme.min.css" rel="stylesheet">
 
-    <link href="css/create-meetups.css" rel="stylesheet"/>
+    <link href="css/create_meetups.css" rel="stylesheet"/>
   </head>
 
   <body>
@@ -19,8 +19,7 @@
       <span id="title">
         <a href="">
           StudyBuddy
-          <img src="http://i.imgur.com/8nF4920.png">
-        </a>
+          <img src="http://i.imgur.com/8nF4920.png"></a>
       </span>
 
       <!-- Shows signed-in user and their profile picture -->
@@ -33,7 +32,8 @@
       </span>
 
       <span id="sign_out">
-        <a href="" Sign Out </a>
+        |
+        <a href=""> Sign Out </a>
       </span>
     </div>
 
