Converted all EMs to PX

--- a/static/homepage.html
+++ b/static/homepage.html
@@ -29,11 +29,11 @@
 		<!-- Shows signed in user and their profile picture -->
 		<span id="TopRight">
 			<span id="User">
-				Welcome!
+				Welcome Home!
 
 				<!-- User Name and Profile Picture, LINK to Profile Page -->
 				<a href="">
-					<img src="http://i.imgur.com/8nF4920.png" id="UserPhoto">
+					<img src="http://i.imgur.com/QoDwTz3.jpg" id="UserPhoto">
 				</a>
 				<a href="" id="UserName">Corgi</a>
 			</span>
@@ -61,8 +61,10 @@
 	</div>
 
 	<!-- FRIENDS LIST -->
-	<div id="AddFriendButton">
-		+ Add Friend
+	<div id="FriendsList">
+		<div id="AddFriendButton">
+			+Add Friend
+		</div>	
 	</div>
 
 	<!-- MAIN BOX -->
