--- a/static/create_meetups.html
+++ b/static/create_meetups.html
@@ -19,15 +19,16 @@
 
       <span id="top_left">
         <a href="" id="title">StudyBuddy</a>
-        <a href="" id="logo">
-          <img src="http://i.imgur.com/8nF4920.png">
-        </a>
+
+        <a href="">
+          <img src="http://i.imgur.com/8nF4920.png" id="logo"></a>
       </span>
 
       <!-- Shows signed-in user and their profile picture -->
       <span id="top_right">
         <span id="user">
           Create A Meetup!
+
           <a href="">
             <img src="http://i.imgur.com/8nF4920.png" id="user_photo">
           </a>
