Homepage CSS 90% Complete

--- a/static/homepage.html
+++ b/static/homepage.html
@@ -33,7 +33,7 @@
 
 				<!-- User Name and Profile Picture, LINK to Profile Page -->
 				<a href="">
-					<img src="http://i.imgur.com/QoDwTz3.jpg" id="UserPhoto">
+					<img src="http://i.imgur.com/mGhsq0V.png" id="UserPhoto">
 				</a>
 				<a href="" id="UserName">Corgi</a>
 			</span>
@@ -50,7 +50,7 @@
 	<!-- TOP MENU BAR -->
 	<div id="MenuBar">
 		<span id="LeftMenuBar">
-			<span id="Friends">Friends</span>
+			Friends
 		</span>
 
 		<span id="RightMenuBar">
@@ -62,8 +62,12 @@
 
 	<!-- FRIENDS LIST -->
 	<div id="FriendsList">
+		<span id="FriendsMessage">
+			You have no friends, why not try getting some?
+			<p>(When the feature becomes available!)</p>
+		</span>
 		<div id="AddFriendButton">
-			+Add Friend
+			+ Add Friend
 		</div>	
 	</div>
 
@@ -73,26 +77,26 @@
 		<!-- Paw Pad doesn't need to be linked to My Meetups, 
 			 instead information should be shown as a popup when 
 			 clicked -->
-		<!-- Commented Out to Save Space
 		<span>
-			<img src="http://i.imgur.com/tK0R51e.png" id="Big Paw">
+			<img src="http://i.imgur.com/tK0R51e.png" id="BigPaw">
 		</span>
-		-->
 
+		<span id="PawMessage">
+			No Meetups to Show
+		</span>
 		<!-- My/Create Meetup Buttons -->
-		<span id="Bones">
+		<span>
 
 			<!-- My Meetups Button (Top)-->
-			<a href="">
-				<img src="http://i.imgur.com/bt9OrEP.png" class="My Meetups Bone">
+			<a href="" class="Bones">
+				<img src="http://i.imgur.com/iDGB34j.png" id="MyMeetups">
+				<span id="MyMeetupsMessage">My Meetups</span>
 			</a>
-
-			<!-- Spaceholder (Gap) Between the Bones -->
-			<p id="SpaceBetweenBones"></p>
 			
 			<!-- Create Meetup Button (Bottom) -->
-			<a href="">
-				<img src="http://i.imgur.com/DhPqUYp.png" class="Create Meetup Bone">
+			<a href="" class="Bones">
+				<img src="http://i.imgur.com/iDGB34j.png" id="CreateMeetup">
+				<span id="CreateMeetupMessage">+ Create Meetup</span>
 			</a>
 		</span>
 	</div>
