--- a/static/homepage.html
+++ b/static/homepage.html
@@ -18,7 +18,7 @@
 
 		<!-- Links to Homepage, Title and Corgi Logo -->
 		<span>
-			<a href="" id="TopLeft">
+			<a href="homepage.html" id="TopLeft">
 				<span id="Title">StudyBuddy</span>
 				<img src="http://i.imgur.com/8nF4920.png" id="TitleLogo">
 			</a>
@@ -31,7 +31,7 @@
 
 				<!-- User Name and Profile Picture, LINK to Profile Page -->
 				<img src="http://i.imgur.com/mGhsq0V.png" id="UserPhoto">
-				<a href="" id="UserName">Corgi</a>
+				<a href="profile.html" id="UserName">Corgi</a>
 			</span>
 
 			<!-- Shows sign out option -->
@@ -50,9 +50,9 @@
 		</span>
 
 		<span id="RightMenuBar">
-			<a href="">Settings</a>
-			<a href="" id="ContactUs">Contact Us</a>
-			<a href="">Help</a>
+			<a href="settings.html">Settings</a>
+			<a href="contact_us.html" id="ContactUs">Contact Us</a>
+			<a href="help.html">Help</a>
 		</span>
 	</div>
 
@@ -70,8 +70,8 @@
 	<!-- MAIN BOX -->
 	<div id="MainBox">
 
-		<!-- Paw Pad doesn't need to be linked to My Meetups, 
-			 instead information should be shown as a popup when 
+		<!-- Paw Pad doesn't need to be linked to My Meetups,
+			 instead information should be shown as a popup when
 			 clicked -->
 		<span>
 			<img src="http://i.imgur.com/tK0R51e.png" id="BigPaw">
@@ -84,13 +84,13 @@
 		<span>
 
 			<!-- My Meetups Button (Top)-->
-			<a href="" class="Bones">
+			<a href="my_meetups.html" class="Bones">
 				<img src="http://i.imgur.com/iDGB34j.png" id="MyMeetups">
 				<span id="MyMeetupsMessage">My Meetups</span>
 			</a>
-			
+
 			<!-- Create Meetup Button (Bottom) -->
-			<a href="" class="Bones">
+			<a href="create_meetups.html" class="Bones">
 				<img src="http://i.imgur.com/iDGB34j.png" id="CreateMeetup">
 				<span id="CreateMeetupMessage">+ Create Meetup</span>
 			</a>
