Added login skeleton

--- a/static/contact_us.html
+++ b/static/contact_us.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-	<title>Profile</title>
+	<title>Contact Us</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -39,7 +39,7 @@
 			<!-- Shows sign out option -->
 			<!-- Bar Separator -->
 			<span id="BarSeparator">|</span>
-			<a href="" id="Sign Out">Sign Out</a>
+			<a href="log_in.html" id="Sign Out">Sign Out</a>
 				<!-- Bar Separator -->
 		</span>
 	</div>
