--- a/static/create_meetups.html
+++ b/static/create_meetups.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>StudyBuddy</title>
+    <title>Create Meetups</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -35,7 +35,7 @@
           <a href="profile.html" id="user_name">Corgi</a>
         </span>
         <span id="bar">|</span>
-        <a href="" id="sign_out">Sign Out</a>
+        <a href="log_in.html" id="sign_out">Sign Out</a>
       </span>
     </div>
 
@@ -118,7 +118,7 @@
             <span id="crowded">Crowded Level: N/A</span>
           </div>
         </div>
-        <a href="">
+        <a href="homepage.html">
           <button type="button" id="submit_button">Create Meeting!</button>
         </a>
       </div>
