--- a/static/homepage.html
+++ b/static/homepage.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-	<title>StudyBuddy</title>
+	<title>Home</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -39,7 +39,7 @@
 			<span id="BarSeparator">|</span>
 
 			<!-- Sign Out Button LINK to Login page -->
-			<a href="" id="SignOut">Sign Out</a>
+			<a href="log_in.html" id="SignOut">Sign Out</a>
 		</span>
 	</div>
 
