--- a/static/my_meetups.html
+++ b/static/my_meetups.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-	<title>Profile</title>
+	<title>My Meetups</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -39,7 +39,7 @@
 			<!-- Bar Separator -->
 			<span id="BarSeparator">|</span>
 			<!-- Sign Out Button -->
-			<a href="" id="SignOut">Sign Out</a>
+			<a href="log_in.html" id="SignOut">Sign Out</a>
 		</span>
 	</div>
 
