Fixed spelling mistake

--- a/static/create_meetups.html
+++ b/static/create_meetups.html
@@ -35,7 +35,7 @@
           <a href="profile.html" id="user_name">Corgi</a>
         </span>
         <span id="bar">|</span>
-        <a href="log_in.html" id="sign_out">Sign Out</a>
+        <a href="login.html" id="sign_out">Sign Out</a>
       </span>
     </div>
 
