--- a/static/my_meetups.html
+++ b/static/my_meetups.html
@@ -39,7 +39,7 @@
 			<!-- Bar Separator -->
 			<span id="BarSeparator">|</span>
 			<!-- Sign Out Button -->
-			<a href="log_in.html" id="SignOut">Sign Out</a>
+			<a href="login.html" id="SignOut">Sign Out</a>
 		</span>
 	</div>
 
