--- a/static/homepage.html
+++ b/static/homepage.html
@@ -39,7 +39,7 @@
 			<span id="BarSeparator">|</span>
 
 			<!-- Sign Out Button LINK to Login page -->
-			<a href="log_in.html" id="SignOut">Sign Out</a>
+			<a href="login.html" id="SignOut">Sign Out</a>
 		</span>
 	</div>
 
