--- a/static/settings.html
+++ b/static/settings.html
@@ -39,7 +39,7 @@
 			<!-- Shows sign out option -->
 			<!-- Bar Separator -->
 			<span id="BarSeparator">|</span>
-			<a href="log_in.html" id="Sign Out">Sign Out</a>
+			<a href="login.html" id="Sign Out">Sign Out</a>
 				<!-- Bar Separator -->
 		</span>
 	</div>
