--- a/static/login.html
+++ b/static/login.html
@@ -1,29 +1,65 @@
-<!doctype html>
-
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<title>Log-In</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Test Login</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<!-- Bootstrap -->
-	<link href="css/bootstrap.min.css" rel="stylesheet">
-	<link href="css/bootstrap-theme.min.css" rel="stylesheet">
-	<link href="" rel="stylesheet"/>
+  <!-- Bootstrap -->
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/bootstrap-theme.min.css" rel="stylesheet">
+  <link href="css/login.css" rel="stylesheet"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+
+  <!-- JavaScript -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js">
+    </script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
+    </script>
+
+  <!-- Font -->
+  <link href="https://fonts.googleapis.com/css?family=Coiny" rel="stylesheet">
+  <style>
+      body {
+        font-family: 'Coiny', cursive;
+      }
+    </style>
 </head>
 
 <body>
+  <div id="title">
+    <p>StudyBuddy</sp>
+  </div>
+  <div class="container">
+    <form class="form-horizontal">
+      <div class="form-group">
+        <label class="control-label col-sm-offset-2 col-sm-2" for="email">Email:</label>
+        <div class="col-sm-5">
+          <input type="email" class="form-control" id="email" placeholder="Enter email">
+        </div>
+      </div>
 
-	<!-- TOP -->
-	<div id="Top">
+      <div class="form-group">
+        <label class="control-label col-sm-offset-2 col-sm-2" for="pwd">Password:</label>
+        <div class="col-sm-5"> 
+          <input type="password" class="form-control" id="pwd" placeholder="Enter password">
+        </div>
+      </div>
 
-		<!-- Links to Homepage, Title and Corgi Logo -->
-		<span id="Title">StudyBuddy</span>
-	  <img src="">
-    <div>
-      <span id="WelcomeMsg">Welcome to StudyBuddy! Login below</span>
-    </div>
+      <div class="form-group"> 
+        <div class="col-sm-offset-4 col-sm-5">
+          <div class="checkbox">
+            <label><input type="checkbox">Remember Me</label>
+          </div>
+        </div>
+      </div>
 
-    <a href="homepage.html">Login</a>
+      <div class="form-group"> 
+        <div class="col-sm-offset-4 col-sm-5">
+          <a href="homepage.html" type="submit" class="btn btn-primary btn-block">Login</a>
+        </div>
+      </div>
+    </form>
   </div>
 </body>
+</html>
