Initial Setup of All Pages Done!

--- a/static/homepage.html
+++ b/static/homepage.html
@@ -47,7 +47,7 @@
 				</button>
 
 				<!-- Title/Logo -->
-	    		<a class="navbar-brand" href="">
+	    		<a class="navbar-brand" href="homepage.html">
 	    			<span id="title" class="orange">StudyBuddy</span>
 	    		</a>
 	    	</div>
@@ -58,14 +58,17 @@
 
 					<!-- Home -->
 					<li class="active menu">
-						<a class="rightMenu orange" href="">
+						<a class="rightMenu" href="homepage.html">
 							Home
 						</a>
 					</li>
 
 					<!-- User/Options -->
 					<li>
-						<a class="dropdown-toggle rightMenu" data-toggle="dropdown" href=""><span class="orange">Corgi </span><span class="caret"></span></a>
+						<a class="dropdown-toggle rightMenu" data-toggle="dropdown" href="">
+							<span class="orange">Corgi </span>
+							<span class="caret orange"></span>
+						</a>
 						<ul class="dropdown-menu text-center">
 							<li><a href="settings.html">Settings</a></li>
 							<li><a href="contact_us.html">Contact Us</a></li>
