--- a/static/settings.html
+++ b/static/settings.html
@@ -1,60 +1,86 @@
-<!doctype html>
-
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<title>Settings</title>
+	<title>Help</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- Bootstrap -->
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/bootstrap-theme.min.css" rel="stylesheet">
-	<link href="" rel="stylesheet"/>
+	<link href="css/settings.css" rel="stylesheet"/>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+
+	<!-- JavaScript -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js">
+	</script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
+	</script>
+
+	<!-- Font -->
+	<link href="https://fonts.googleapis.com/css?family=Coiny" rel="stylesheet">
+	<style>
+      body {
+        font-family: 'Coiny', cursive;
+      }
+    </style>
 </head>
 
 <body>
+	<nav class="navbar navbar-inverse">
+		<div class="container-fluid">
+			<div class="navbar-header">
 
-	<!-- TOP -->
-	<div id="Top">
+		    	<!-- Collapse Button -->
+				<button type="button" class="navbar-toggle" data-toggle="collapse" 
+				data-target="#myNavbar">
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
 
-		<!-- Links to Homepage, Title and Corgi Logo -->
-		<span>
-			<a href="homepage.html" id="TopLeft">
-					<span id="Title">StudyBuddy</span>
-					<img src="">
-			</a>
-		</span>
+				<!-- Title/Logo -->
+	    		<a class="navbar-brand" href="homepage.html">
+	    			<span id="title" class="orange">StudyBuddy</span>
+	    		</a>
+	    	</div>
 
-		<!-- Shows signed in user and their profile picture -->
-		<span id="TopRight">
-			<span id="User">
-				Settings
+		    <!-- Home/User/Options -->
+		    <div class="collapse navbar-collapse navbar-right" id="myNavbar">
+				<ul class="nav navbar-nav">
 
-				<!-- User Profile Picture -->
-				<img src="" id="UserPhoto">
-				<!-- User Name -->
-				<a href="profile.html" id="UserName">Corgi</a>
-			</span>
+					<!-- Home -->
+					<li class="menu">
+						<a class="rightMenu orange" href="homepage.html">
+							Home
+						</a>
+					</li>
 
-			<!-- Shows sign out option -->
-			<!-- Bar Separator -->
-			<span id="BarSeparator">|</span>
-			<a href="login.html" id="Sign Out">Sign Out</a>
-				<!-- Bar Separator -->
-		</span>
+					<!-- User/Options -->
+					<li>
+						<a class="dropdown-toggle rightMenu" data-toggle="dropdown" href="">
+							<span class="orange">Corgi </span>
+							<span class="caret orange"></span>
+						</a>
+
+						<ul class="dropdown-menu text-center">
+							<li><a href="settings.html">Settings</a></li>
+							<li><a href="contact_us.html">Contact Us</a></li>
+							<li><a href="help.html">Help</a></li>
+							<hr>
+							<li><a href="login.html">Sign Out</a></li>
+						</ul>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+
+	<!-- Main Screen -->
+	<div class="container-fluid text-left">
+		<h1>Settings</h1>
+		<br>
+		<h4>Coming Soon!</h4>
 	</div>
-
-	<!-- TOP MENU BAR -->
-	<div id="Menu Bar">
-		<span id="LeftMenuBar">
-			Friends
-		</span>
-
-		<span id="RightMenuBar">
-			<a href="settings.html">Settings</a>
-			<a href="contact_us.html">Contact Us</a>
-			<a href="help.html">Help</a>
-		</span>
-	</div>
-
 </body>
+</html>
