--- a/static/create_meetups.html
+++ b/static/create_meetups.html
@@ -1,145 +1,233 @@
 <!doctype html>
 
-<html>
+<html lang="en">
   <head>
-    <title>Create Meetups</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!--Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-  	<link href="css/bootstrap-theme.min.css" rel="stylesheet">
-
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="css/bootstrap-theme.min.css" rel="stylesheet"/>
+    <link  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
+    <link href="datetime/jquery.datetimepicker.css" type="text/css" rel="stylesheet">
     <link href="css/create_meetups.css" rel="stylesheet"/>
+
+    <!-- Font -->
+	  <link href="https://fonts.googleapis.com/css?family=Coiny" rel="stylesheet">
   </head>
 
   <body>
-    <div id="top">
-      <!-- Links to Homepage, Title and Logo -->
+    <nav class="navbar navbar-inverse">
+		  <div class="container-fluid">
+	        <div class="navbar-header">
 
-      <span>
-        <a href="homepage.html" id="top_left">
-          <span id="title">StudyBuddy</span>
-          <img src="http://i.imgur.com/8nF4920.png" id="logo">
-        </a>
-      </span>
+		    	  <!-- Collapse Button -->
+				    <button type="button" class="navbar-toggle" data-toggle="collapse"
+				    data-target="#myNavbar">
+					    <span class="icon-bar"></span>
+					    <span class="icon-bar"></span>
+					    <span class="icon-bar"></span>
+				    </button>
 
-      <!-- Shows signed-in user and their profile picture -->
-      <span id="top_right">
-        <span id="user">
-          Create A Meetup!
+				    <!-- Title/Logo -->
+	    		  <a class="navbar-brand" href="">
+	    			  <span id="title">StudyBuddy</span>
+	    		  </a>
+	    	  </div>
+          <!-- Home/User/Options -->
+		      <div class="collapse navbar-collapse navbar-right" id="myNavbar">
+				  <ul class="nav navbar-nav">
 
-          <a href="">
-            <img src="http://i.imgur.com/mGhsq0V.png" id="user_photo">
-          </a>
-          <a href="profile.html" id="user_name">Corgi</a>
-        </span>
-        <span id="bar">|</span>
-        <a href="login.html" id="sign_out">Sign Out</a>
-      </span>
+					  <!-- Home -->
+					  <li class="active menu">
+						  <a class="rightMenu" href="">
+							  Home
+						  </a>
+					  </li>
+					  <!-- Other Options -->
+					  <li>
+						  <a class="dropdown-toggle rightMenu" data-toggle="dropdown" href="">Directory<span class="caret"></span></a>
+						  <ul class="dropdown-menu text-center">
+							  <li><a href="">Settings</a></li>
+						    <li><a href="">Contact Us</a></li>
+							  <li><a href="">Help</a></li>
+                <hr>
+						    <li><a href="">Sign Out</a></li>
+						  </ul>
+					  </li>
+				  </ul>
+			  </div>
+		  </div>
+	  </nav>
+
+    <!-- Main Screen -->
+    <div class="container-fluid text-center" id="main">
+      <div>
+        <h1 id="page_name">Create a Meetup!</h1>
+      </div>
+		  <div class="row content">
+			  <!-- Friends List SideNav -->
+			  <div class="col-sm-4 text-center">
+          <div class="btn-group" id="friend_select">
+            <h3 id="friend_title">Select Study Buddies!</h3>
+            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" id="friend_dropdown">Choose here<span class="caret"></span></button>
+            <ul class="dropdown-menu scrollable-menu" role="menu" id="friend_scroll">
+                <li>
+                  <div class="checkbox">
+                    <label><input type="checkbox" value="">Shiba</label>
+                  </div>
+                </li>
+                <li>
+                  <div class="checkbox">
+                    <label><input type="checkbox" value="">Shiba</label>
+                  </div>
+                </li>
+                <li>
+                  <div class="checkbox">
+                    <label><input type="checkbox" value="">Shiba</label>
+                  </div>
+                </li>
+                <li>
+                  <div class="checkbox">
+                    <label><input type="checkbox" value="">Shiba</label>
+                  </div>
+                </li>
+                <li>
+                  <div class="checkbox">
+                    <label><input type="checkbox" value="">Shiba</label>
+                  </div>
+                </li>
+                <li>
+                  <div class="checkbox">
+                    <label><input type="checkbox" value="">Shiba</label>
+                  </div>
+                </li>
+                <li>
+                  <div class="checkbox">
+                    <label><input type="checkbox" value="">Shiba</label>
+                  </div>
+                </li>
+                <li>
+                  <div class="checkbox">
+                    <label><input type="checkbox" value="">Shiba</label>
+                  </div>
+                </li>
+                <li>
+                  <div class="checkbox">
+                    <label><input type="checkbox" value="">Shiba</label>
+                  </div>
+                </li>
+                <li>
+                  <div class="checkbox">
+                    <label><input type="checkbox" value="">Shiba</label>
+                  </div>
+                </li>
+                <li>
+                  <div class="checkbox">
+                    <label><input type="checkbox" value="">Shiba</label>
+                  </div>
+                </li>
+                <li>
+                  <div class="checkbox">
+                    <label><input type="checkbox" value="">Shiba</label>
+                  </div>
+                </li>
+                <li>
+                  <div class="checkbox">
+                    <label><input type="checkbox" value="">Shiba</label>
+                  </div>
+                </li>
+                <li>
+                  <div class="checkbox">
+                    <label><input type="checkbox" value="">Shiba</label>
+                  </div>
+                </li>
+                <li>
+                  <div class="checkbox">
+                    <label><input type="checkbox" value="">Shiba</label>
+                  </div>
+                </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="col-sm-4">
+          <div class="dropdown" id="loc_dropdown">
+
+            <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">Select a study location...<span class="caret"></span></button>
+            <ul class="dropdown-menu" id="location_drop">
+              <!-- Study locations on campus -->
+              <li>
+                <div class="radio">
+                  <label><input type="radio" name="study_loc">Geisel</label>
+                </div>
+              </li>
+              <li>
+                <div class="radio">
+                  <label><input type="radio" name="study_loc">Courtroom</label>
+                </div>
+              </li>
+              <li>
+                <div class="radio">
+                  <label><input type="radio" name="study_loc">Sun God Lounge</label>
+                </div>
+              </li>
+              <li>
+                <div class="radio">
+                  <label><input type="radio" name="study_loc">Price Center</label>
+                </div>
+              </li>
+              <li>
+                <div class="radio">
+                  <label><input type="radio" name="study_loc">The Village</label>
+                </div>
+              </li>
+            </ul>
+          </div>
+
+          <h3 id="loc_text"> Selected location </h4>
+          <div id="map"></div>
+
+          <h3 id="date_text"> Select study date and time: </h4>
+          <input id="datetimepicker" type="text">
+
+        </div>
+
+        <div class="col-sm-4">
+          <h3 id="stats">Location stats</h4>
+
+          <h4>Quiet?:</h5>
+          <h4>Crowded?:</h5>
+          <div>
+            <a type="button" id="cancel" class="btn btn-danger btn-lg" href="">
+              <span>Cancel Meetup</span>
+            </a>
+          </div>
+          <div>
+            <a type="button" id="create" class="btn btn-success btn-lg" href="">
+              <span>Schedule this Meetup!</span>
+            </a>
+          </div>
+        </div>
+      </div>
     </div>
 
-    <!-- TOP MENU BAR -->
-  	<div id="menu_bar">
-  		<span id="left_menu_bar">
-  			<span id="friends">Friends</span>
-  		</span>
 
-  		<span id="right_menu_bar">
-  			<a href="settings.html">Settings</a>
-  			<a href="contact_us.html" id="contact">Contact Us</a>
-  			<a href="help.html">Help</a>
-  		</span>
-  	</div>
 
-    <!-- MAIN BODY -->
-    <div id="main_body">
-      <div id="friends_list">
-        <span id="friends_message">
-          You have no friends, why not try getting some?
-          <p>(When the feature becomes available!)</p>
-        </span>
-        <div id="friends_instruction">Select Friends Above</div>
-      </div>
-      <div id="main_center">
-        <textarea cols="30" rows="1" id="location">Please enter a study location...</textarea>
-        <div>
-          <span id="location_text">Inputted location on Google Maps</span>
-        </div>
-        <div id="map"></div>
-
-        <!--Choose starting date of study session -->
-        <div id="date">
-          <span>Enter Start Date:</span>
-          <textarea cols="5" rows="1" id="date_month">Month</textarea>
-          <span> </span>
-          <textarea cols="2" rows="1" id="date_day">Day</textarea>
-          <span> </span>
-          <textarea cols="2" rows="1" id="date_year">Year</textarea>
-        </div>
-
-        <!--Choose start and end time for study session-->
-        <div id="time">
-          <div id="start_time">
-            <span>Start Time</span>
-            <textarea cols="1" rows="1" id="start_hour"></textarea>
-            <span>:</span>
-            <textarea cols="1" rows="1" id="start_min"></textarea>
-            <label>AM <input type="checkbox" name="checkbox" value="value"></label>
-            <span> / </span>
-            <label>PM <input type="checkbox" name="checkbox" value="value"></label>
-          </div>
-
-          <div id="end_time">
-            <label><input type="checkbox" name="checkbox" value="value"> End Time</label>
-            <textarea cols="1" rows="1" id="end_hour"></textarea>
-            <span>:</span>
-            <textarea cols="1" rows="1" id="end_min"></textarea>
-            <label>AM <input type="checkbox" name="checkbox" value="value"></label>
-            <span> / </span>
-            <label>PM <input type="checkbox" name="checkbox" value="value"></label>
-          </div>
-        </div>
-
-      </div>
-
-      <div id="main_right">
-        <a href="homepage.html">
-          <button type="button" id="home_button">Cancel</button>
-        </a>
-        <div id="location_info">
-          <div>
-            <span id="stats_header">Location Stats</span>
-          </div>
-          <div>
-            <span id="quiet">Quiet Level: N/A</span>
-          </div>
-          <div>
-            <span id="crowded">Crowded Level: N/A</span>
-          </div>
-        </div>
-        <a href="homepage.html">
-          <button type="button" id="submit_button">Create Meeting!</button>
-        </a>
-      </div>
-    </div>
-    <script src="https://code.jquery.com/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script>
-      function initMap() {
-        var uluru = {lat: 32.8801, lng: -117.2340};
-        var map = new google.maps.Map(document.getElementById('map'), {
-          zoom: 15,
-          center: uluru
-        });
-        var marker = new google.maps.Marker({
-          position: uluru,
-          map: map
-        });
-      }
-    </script>
+    <!-- JQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js">
+  	</script>
+    <!-- Bootstrap -->
+  	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
+  	</script>
+    <!-- Google Maps API -->
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBtN1_XktTqXV4vg_Jcnuon9KXrFykAnlc&callback=initMap">
     </script>
+    <!-- DateTimePicker -->
+    <script src="datetime/build/jquery.datetimepicker.full.min.js">
+    </script>
+
+    <script src="js/create_meetups.js"></script>
   </body>
 </html>
