--- a/static/create_meetups.html
+++ b/static/create_meetups.html
@@ -74,81 +74,83 @@
             <ul class="dropdown-menu scrollable-menu" role="menu" id="friend_scroll">
                 <li>
                   <div class="checkbox">
-                    <label><input type="checkbox" value="">Shiba</label>
+                    <label id="friend1"><input type="checkbox" value=""></label>
                   </div>
                 </li>
                 <li>
                   <div class="checkbox">
-                    <label><input type="checkbox" value="">Shiba</label>
+                    <label id="friend2"><input type="checkbox" value=""></label>
                   </div>
                 </li>
                 <li>
                   <div class="checkbox">
-                    <label><input type="checkbox" value="">Shiba</label>
+                    <label id="friend3"><input type="checkbox" value=""></label>
                   </div>
                 </li>
                 <li>
                   <div class="checkbox">
-                    <label><input type="checkbox" value="">Shiba</label>
+                    <label id="friend4"><input type="checkbox" value=""></label>
                   </div>
                 </li>
                 <li>
                   <div class="checkbox">
-                    <label><input type="checkbox" value="">Shiba</label>
+                    <label id="friend5"><input type="checkbox" value=""></label>
                   </div>
                 </li>
                 <li>
                   <div class="checkbox">
-                    <label><input type="checkbox" value="">Shiba</label>
+                    <label id="friend6"><input type="checkbox" value=""></label>
                   </div>
                 </li>
                 <li>
                   <div class="checkbox">
-                    <label><input type="checkbox" value="">Shiba</label>
+                    <label id="friend7"><input type="checkbox" value=""></label>
                   </div>
                 </li>
                 <li>
                   <div class="checkbox">
-                    <label><input type="checkbox" value="">Shiba</label>
+                    <label id="friend8"><input type="checkbox" value=""></label>
                   </div>
                 </li>
                 <li>
                   <div class="checkbox">
-                    <label><input type="checkbox" value="">Shiba</label>
+                    <label id="friend9"><input type="checkbox" value=""></label>
                   </div>
                 </li>
                 <li>
                   <div class="checkbox">
-                    <label><input type="checkbox" value="">Shiba</label>
+                    <label id="friend10"><input type="checkbox" value=""></label>
                   </div>
                 </li>
                 <li>
                   <div class="checkbox">
-                    <label><input type="checkbox" value="">Shiba</label>
+                    <label id="friend11"><input type="checkbox" value=""></label>
                   </div>
                 </li>
                 <li>
                   <div class="checkbox">
-                    <label><input type="checkbox" value="">Shiba</label>
+                    <label id="friend12"><input type="checkbox" value=""></label>
                   </div>
                 </li>
                 <li>
                   <div class="checkbox">
-                    <label><input type="checkbox" value="">Shiba</label>
+                    <label id="friend13"><input type="checkbox" value=""></label>
                   </div>
                 </li>
                 <li>
                   <div class="checkbox">
-                    <label><input type="checkbox" value="">Shiba</label>
-                  </div>
+                    <label id="friend14"><input type="checkbox" value=""></label>
                 </li>
                 <li>
                   <div class="checkbox">
-                    <label><input type="checkbox" value="">Shiba</label>
+                    <label id="friend15"><input type="checkbox" value=""></label>
                   </div>
                 </li>
             </ul>
           </div>
+
+          <h3 id="date_text"> Select study date and time: </h4>
+          <input id="datetimepicker" type="text">
         </div>
 
         <div class="col-sm-4">
@@ -202,10 +204,6 @@
 
           <h3 id="loc_text"> Selected location </h4>
           <div id="map"></div>
-
-          <h3 id="date_text"> Select study date and time: </h4>
-          <input id="datetimepicker" type="text">
-
         </div>
 
         <div class="col-sm-4">
@@ -242,7 +240,6 @@
     <!-- DateTimePicker -->
     <script src="datetime/build/jquery.datetimepicker.full.min.js">
     </script>
-
     <script src="js/create_meetups.js"></script>
   </body>
 </html>
