Updated Bootstrap Files/Fixed Styling

--- a/static/create_meetup.html
+++ b/static/create_meetup.html
@@ -1,19 +1,31 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="css/bootstrap-theme.min.css" rel="stylesheet"/>
-    <link  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
-    <link href="datetime/jquery.datetimepicker.css" type="text/css" rel="stylesheet">
-    <link href="css/create_meetups.css" rel="stylesheet"/>
+  <!-- Corresponding CSS File -->
+  <link href="css/homepage.css" rel="stylesheet"/>
 
-    <!-- Font -->
-	  <link href="https://fonts.googleapis.com/css?family=Coiny" rel="stylesheet">
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+
+  <!-- jQuery library -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
+  <!-- Latest compiled JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+  <!-- Font -->
+  <link href="https://fonts.googleapis.com/css?family=Coiny" rel="stylesheet">
+  <style>
+      body {
+        font-family: 'Coiny', cursive;
+      }
+    </style>
+
   </head>
 
   <body>
