--- a/static/my_meetups.html
+++ b/static/my_meetups.html
@@ -1,63 +1,106 @@
-<!doctype html>
-
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
 	<title>My Meetups</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<!-- Bootstrap -->
-	<link href="css/bootstrap.min.css" rel="stylesheet">
-	<link href="css/bootstrap-theme.min.css" rel="stylesheet">
-	<link href="" rel="stylesheet"/>
+	<!-- Corresponding CSS File -->
+	<link href="css/my_meetups.css" rel="stylesheet"/>
+
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+
+	<!-- jQuery library -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
+	<!-- Latest compiled JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+	<!-- Font -->
+	<link href="https://fonts.googleapis.com/css?family=Coiny" rel="stylesheet">
+	<style>
+      body {
+        font-family: 'Coiny', cursive;
+      }
+    </style>
 </head>
 
 <body>
+	<nav class="navbar navbar-inverse">
+		<div class="container-fluid">
+			<div class="navbar-header">
 
-	<!-- TOP -->
-	<div id="Top">
+		    	<!-- Collapse Button -->
+				<button type="button" class="navbar-toggle" data-toggle="collapse" 
+				data-target="#myNavbar">
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
 
-		<!-- Links to Homepage, Title and Corgi Logo -->
-		<span>
-			<a href="homepage.html" id="TopLeft">
-				<span id="Title">StudyBuddy</span>
-				<img src="">
-			</a>
-		</span>
+				<!-- Title/Logo -->
+	    		<a class="navbar-brand" href="homepage.html">
+	    			<span id="title">StudyBuddy</span>
+	    		</a>
+	    	</div>
 
-		<!-- Shows signed in user and their profile picture -->
-		<span id="TopRight">
-			<span id="User">
-				Your Meetups!
+		    <!-- Home/User/Options -->
+		    <div class="collapse navbar-collapse navbar-right" id="myNavbar">
+				<ul class="nav navbar-nav">
 
-				<!-- User Profile Picture -->
-				<img src="" id="UserPhoto">
-				<!-- User Name -->
-				<a href="profile.html" id="UserName">Corgi</a>
-			</span>
-			<!-- Shows sign out option -->
-			<!-- Bar Separator -->
-			<span id="BarSeparator">|</span>
-			<!-- Sign Out Button -->
-			<a href="login.html" id="SignOut">Sign Out</a>
-		</span>
-	</div>
+					<!-- Home -->
+					<li class="active menu">
+						<a class="rightMenu" href="homepage.html">
+							Home
+						</a>
+					</li>
 
-	<!-- TOP MENU BAR -->
-	<div id="MenuBar">
-		<span id="LeftMenuBar">
-			Friends
-		</span>
+					<!-- User/Options -->
+					<li>
+						<a id="options" class="dropdown-toggle rightMenu" data-toggle="dropdown" href="">
+							<span>Corgi </span>
+							<span class="caret "></span>
+						</a>
 
-		<span id="RightMenuBar">
-			<a href="settings.html">Settings</a>
-			<a href="contact_us.html">Contact Us</a>
-			<a href="help.html">Help</a>
-		</span>
-	</div>
+						<ul class="dropdown-menu text-center">
+							<li><a href="settings.html">Settings</a></li>
+							<li><a href="contact_us.html">Contact Us</a></li>
+							<li><a href="help.html">Help</a></li>
+							<hr>
+							<li><a href="login.html">Sign Out</a></li>
+						</ul>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</nav>
 
-	<div id="MainBox">
-
-
+	<!-- Main Screen -->
+	<div class="container-fluid text-center">
+		<h1>Contact Us</h1>
+		<br>
+		<button type="button" class="btn btn-primary btn-lg" data-toggle="collapse" data-target="#richard">Richard Oh</button>
+		<div id="richard" class="collapse">
+			<p>rioh@ucsd.edu</p>
+			<p>- OR -</p>
+			<p> (###)-###-#### </p>
+		</div>
+		<hr>
+		<button type="button" class="btn btn-primary btn-lg" data-toggle="collapse" data-target="#ingrid">Ingrid Ou</button>
+		<div id="ingrid" class="collapse">
+			<p>iou@ucsd.edu</p>
+			<p>- OR -</p>
+			<p> (###)-###-#### </p>
+		</div>
+		<hr>
+		<button type="button" class="btn btn-primary btn-lg" data-toggle="collapse" data-target="#jovan">Jovan Limosnero</button>
+		<div id="jovan" class="collapse">
+			<p>jlimosne@ucsd.edu</p>
+			<p>- OR -</p>
+			<p> (###)-###-#### </p>
+		</div>
 	</div>
 </body>
+</html>
